env_service/environments/bfcl/gorilla/gorilla/eval/eval-scripts/codebleu/parser/tree-sitter-python/test/corpus/errors.txt
====================================
An error before a string literal
====================================

def a(b):
    c.

    """
    d
    """

    e

---

(module
  (function_definition
    (identifier)
    (parameters
      (identifier))
    (ERROR
      (identifier))
    (block
      (expression_statement
        (string (string_content)))
      (expression_statement
        (identifier)))))
